added call to action section

--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                                     <div class="review__rating">7.8</div>
                                 </figcaption>
                             </figure>
+
                             <figure class="review">
                                 <blockquote class="review__text">
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta animi.
@@ -197,8 +198,23 @@
                                     <div class="review__rating">9.3</div>
                                 </figcaption>
                             </figure>
+                            
+                            <button class="btn-inline">
+                                Show all <span>&rarr;</span>
+                            </button>
                         </div>
+    
                     </div>
+
+                    <div class="cta">
+                        <h2 class="cta__book-now">
+                            Good news! We have 4 free rooms for your selected dates!
+                        </h2>
+                        <button class="btn">
+                            Only 4 rooms left
+                        </button>
+                    </div>
+
                 </main>
             </div>
         </div>
